<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="hello">Hello World, SimpleCalendar!</string>

    <string name="app_name">Planning</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Accueil</item>
        <item >Planning</item>
        <item >Listes des courses</item>
        <item >Rendez-vous</item>
        <item >Menus</item>
        <item >Option</item>
    </string-array>

  <string-array name="add_elements_items">
    <item >Prise de rendez-vous</item>
    <item >Ajout de menu</item>
    <item >Ajout de liste de course</item>
  </string-array>

    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_calendar</item>
        <item>@drawable/ic_courses</item>
        <item>@drawable/ic_rdv</item>
        <item>@drawable/ic_menu</item>
        <item>@drawable/ic_option</item>
        <!--<item>@drawable/ic_whats_hot</item>-->
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
	
	<!-- Jour pour le custom calendar -->
	<string name="monday">LUN</string>
    <string name="tuesday">MAR</string>
    <string name="wednesday">MER</string>
    <string name="thursday">JEU</string>
    <string name="friday">VEN</string>
    <string name="saturday">SAM</string>
    <string name="sunday">DIM</string>
  
  <string name="submit_add_button">Ajouter</string>
  <string name="cancel_button">Annuler</string>
  
  <!-- Ajout RDV Activity -->
  <string name="titre_ajout_activity_rdv">Titre</string>
  <string name="plcaholder_libelle_rdv">Libellé du rendez-vous</string>
  <string name="lieu_ajout_activity_rdv">Lieu</string>
  <string name="description_ajout_activity_rdv">Description</string>
  <string name="placeholder_description_rdv">Entrez la description</string>
  <string name="placeholder_lieu_rdv">Lieu du rendez-vous</string>
  
  <!-- Ajout Menu Activity -->
  <string name="contenu_ajout_activity_menu">Contenu</string>
  <string name="titre_ajout_activity_menu">Titre</string>
  <string name="placeholder_libelle_menu">Libellé du menu</string>
  <string name="placeholder_contenu_menu">Contenu du menu</string>

  <!-- Ajout Course Activity -->
  <string name="titre_ajout_activity_course">Titre</string>
  <string name="placeholder_libelle_course">Libellé de la liste</string>
  <string name="lieu_ajout_activity_course">Lieu</string>
  <string name="contenu_ajout_activity_course">Liste</string>
  <string name="placeholer_lieu_course">Lieu des courses</string>
  <string name="placeholder_liste_course">Entrez la liste des courses</string>
  
</resources>
