<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:background="@color/add_activity_course">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="41dp"
            android:text="@string/titre_ajout_activity_course"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/libelle_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contenu_course"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/titre"
            android:hint="Libellé de la liste"
            android:inputType="text" />

        <TextView
            android:id="@+id/contenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/contenu_ajout_activity_course"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/contenu_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contenu"
            android:layout_alignLeft="@+id/submit_course"
            android:layout_alignParentRight="true"
            android:hint="Entrez la liste des courses"
            android:inputType="textMultiLine"
            android:lines="2" />

        <TextView
            android:id="@+id/lieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/titre"
            android:layout_marginTop="60dp"
            android:text="@string/lieu_ajout_activity_course"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/lieu_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/libelle_course"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/lieu"
            android:hint="Lieu des courses" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/submit_course"
            android:layout_below="@+id/submit_course"
            android:layout_marginTop="14dp"
            android:text="Annuler" />

        <Button
            android:id="@+id/submit_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contenu_course"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="63dp"
            android:layout_toRightOf="@+id/contenu"
            android:text="@string/submit_add_button" />

    </RelativeLayout>

</LinearLayout>